EventService integration teest for count of participants